--- a/package.json
+++ b/package.json
@@ -3,16 +3,18 @@
   "version": "0.0.1",
   "private": true,
   "devDependencies": {
-    "react-scripts": "0.9.3"
+    "babel-loader": "^6.3.2",
+    "babel-preset-env": "^1.2.0",
+    "babel-preset-react": "^6.23.0",
+    "json-loader": "^0.5.4",
+    "react-cosmos-webpack": "^2.0.0-beta.8",
+    "webpack": "^2.2.1"
   },
   "dependencies": {
     "react": "^15.4.2",
     "react-dom": "^15.4.2"
   },
   "scripts": {
-    "build": "react-scripts build",
-    "eject": "react-scripts eject",
-    "start": "react-scripts start",
-    "test": "react-scripts test --env=jsdom"
+    "cosmos": "cosmos"
   }
 }
