--- a/package.json
+++ b/package.json
@@ -11,6 +11,8 @@
     "webpack": "^2.2.1"
   },
   "dependencies": {
+    "mobx": "^3.1.2",
+    "mobx-react": "^4.1.1",
     "react": "^15.4.2",
     "react-dom": "^15.4.2"
   },
