--- a/.babelrc
+++ b/.babelrc
@@ -1,6 +1,12 @@
 {
- "presets": [
-   "react",
-   ["env", { "modules": false }]
- ]
+  "presets": [
+    "react",
+    "stage-0",
+    [
+      "env",
+      {
+        "modules": false
+      }
+    ]
+  ]
 }
