--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "babel-loader": "^6.3.2",
     "babel-preset-env": "^1.2.0",
     "babel-preset-react": "^6.23.0",
+    "babel-preset-stage-0": "^6.22.0",
     "json-loader": "^0.5.4",
     "react-cosmos-webpack": "^2.0.0-beta.8",
     "webpack": "^2.2.1"
