--- a/.babelrc
+++ b/.babelrc
@@ -1,12 +1,13 @@
 {
   "presets": [
-    "react",
     "stage-0",
     [
       "env",
       {
         "modules": false
       }
-    ]
-  ]
+    ],
+    "react"
+  ],
+  "plugins": ["transform-class-properties"]
 }
