--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "webpack": "^2.2.1"
   },
   "dependencies": {
+    "icepick": "^1.3.0",
     "mobx": "^3.1.2",
     "mobx-react": "^4.1.1",
     "react": "^15.4.2",
