--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
     "mobx": "^3.1.2",
     "mobx-react": "^4.1.1",
     "react": "^15.4.2",
-    "react-dom": "^15.4.2"
+    "react-dom": "^15.4.2",
+    "react-motion": "^0.4.7"
   },
   "scripts": {
     "cosmos": "cosmos"
