--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   },
   "dependencies": {
     "icepick": "^1.3.0",
+    "immutability-helper": "^2.1.2",
     "mobx": "^3.1.2",
     "mobx-react": "^4.1.1",
     "react": "^15.4.2",
