--- a/package.json
+++ b/package.json
@@ -18,7 +18,8 @@
     "mobx": "^3.1.2",
     "mobx-react": "^4.1.1",
     "react": "^15.4.2",
-    "react-dom": "^15.4.2"
+    "react-dom": "^15.4.2",
+    "styled-components": "^1.4.4"
   },
   "scripts": {
     "cosmos": "cosmos"
