--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   "dependencies": {
     "icepick": "^1.3.0",
     "immutability-helper": "^2.1.2",
+    "lodash": "^4.17.4",
     "mobx": "^3.1.2",
     "mobx-react": "^4.1.1",
     "react": "^15.4.2",
