--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "webpack": "^2.2.1"
   },
   "dependencies": {
+    "form-serialize": "^0.7.1",
     "icepick": "^1.3.0",
     "immutability-helper": "^2.1.2",
     "lodash": "^4.17.4",
