--- a/aws/package.json
+++ b/aws/package.json
@@ -2,7 +2,7 @@
   "name": "aws",
   "version": "0.0.1",
   "description": "aws functions",
-  "main": "app.js",
+  "main": "index.js",
   "author": "Ron ChanOu",
   "license": "MIT",
   "devDependencies": {
