--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "postscribe": "^2.0.8",
     "react": "^15.4.2",
     "react-dom": "^15.4.2",
+    "shortid": "^2.2.8",
     "styled-components": "^1.4.4"
   },
   "scripts": {
