--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "lodash": "^4.17.4",
     "mobx": "^3.1.2",
     "mobx-react": "^4.1.1",
+    "mobx-react-devtools": "^4.2.11",
     "postscribe": "^2.0.8",
     "react": "^15.4.2",
     "react-dom": "^15.4.2",
