--- a/.babelrc
+++ b/.babelrc
@@ -9,5 +9,8 @@
     ],
     "react"
   ],
-  "plugins": ["transform-class-properties"]
+  "plugins": [
+    "transform-runtime",
+    "transform-class-properties"
+  ]
 }
