--- a/package.json
+++ b/package.json
@@ -14,9 +14,11 @@
     "webpack": "^2.2.1"
   },
   "dependencies": {
+    "babel-polyfill": "^6.23.0",
     "form-serialize": "^0.7.1",
     "icepick": "^1.3.0",
     "immutability-helper": "^2.1.2",
+    "isomorphic-fetch": "^2.2.1",
     "lodash": "^4.17.4",
     "mobx": "^3.1.2",
     "mobx-react": "^4.1.1",
@@ -28,6 +30,7 @@
     "styled-components": "^1.4.4"
   },
   "scripts": {
-    "cosmos": "cosmos"
+    "cosmos": "cosmos",
+    "build": "node build"
   }
 }
