--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "postscribe": "^2.0.8",
     "react": "^15.4.2",
     "react-dom": "^15.4.2",
+    "react-loading": "^0.0.9",
     "shortid": "^2.2.8",
     "styled-components": "^1.4.4"
   },
