feat: swipe support

--- a/cosmos.config
+++ b/cosmos.config
@@ -1,3 +1,4 @@
 module.exports = {
-  componentPaths: ['src/react']
+  componentPaths: ['src/react'],
+  hostname: process.env.COSMOS_HOST || 'localhost'
 };
