--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "react": "^15.4.2",
     "react-dom": "^15.4.2",
     "react-loading": "^0.0.9",
+    "react-swipeable": "^3.9.2",
     "shortid": "^2.2.8",
     "styled-components": "^1.4.4"
   },
