feat: many layout changes

--- a/cosmos.config
+++ b/cosmos.config
@@ -1,4 +1,5 @@
 module.exports = {
   componentPaths: ['src/react'],
+  globalImports: ['./public/base.css'],
   hostname: process.env.COSMOS_HOST || 'localhost'
 };
