feat: responsive tweaks, font

--- a/cosmos.config
+++ b/cosmos.config
@@ -1,5 +1,9 @@
 module.exports = {
   componentPaths: ['src/react'],
-  globalImports: ['./public/base.css'],
+  publicPath: 'public',
+  globalImports: [
+    './public/base.css',
+    //'./public/MyFontsWebfontsKit.css'
+  ],
   hostname: process.env.COSMOS_HOST || 'localhost'
 };
