--- a/package.json
+++ b/package.json
@@ -9,8 +9,11 @@
     "babel-preset-env": "^1.2.0",
     "babel-preset-react": "^6.23.0",
     "babel-preset-stage-0": "^6.22.0",
+    "css-loader": "^0.27.3",
     "json-loader": "^0.5.4",
     "react-cosmos-webpack": "^2.0.0-beta.8",
+    "style-loader": "^0.15.0",
+    "url-loader": "^0.5.8",
     "webpack": "^2.2.1"
   },
   "dependencies": {
