--- a/package.json
+++ b/package.json
@@ -10,11 +10,14 @@
     "babel-preset-react": "^6.23.0",
     "babel-preset-stage-0": "^6.22.0",
     "css-loader": "^0.27.3",
+    "html-webpack-plugin": "^2.28.0",
     "json-loader": "^0.5.4",
     "react-cosmos-webpack": "^2.0.0-beta.8",
     "style-loader": "^0.15.0",
     "url-loader": "^0.5.8",
-    "webpack": "^2.2.1"
+    "webpack": "^2.2.1",
+    "webpack-dev-middleware": "^1.10.1",
+    "webpack-hot-middleware": "^2.17.1"
   },
   "dependencies": {
     "babel-polyfill": "^6.23.0",
