--- a/package.json
+++ b/package.json
@@ -6,25 +6,26 @@
     "release": "node build",
     "build": "node scripts/build.js",
     "start": "node scripts/start.js",
-    "test": "node scripts/test.js --env=jsdom"
+    "test": "node scripts/test.js --env=jsdom",
+    "dev": "node_modules/.bin/concurrently --kill-others \"node scripts/start.js\"  \"node scripts/test.js --env=jsdom\""
   },
   "devDependencies": {
-    "babel-plugin-styled-components": "^1.1.1",
-    "babel-plugin-transform-class-properties": "^6.23.0",
-    "babel-plugin-transform-runtime": "^6.23.0",
-    "babel-preset-env": "^1.2.2",
-    "babel-preset-react": "^6.23.0",
-    "babel-preset-stage-0": "^6.22.0",
-    "react-cosmos-webpack": "^2.0.0-beta.8",
     "autoprefixer": "6.7.2",
     "babel-core": "6.22.1",
     "babel-eslint": "7.1.1",
     "babel-jest": "18.0.0",
     "babel-loader": "6.2.10",
+    "babel-plugin-styled-components": "^1.1.1",
+    "babel-plugin-transform-class-properties": "^6.23.0",
+    "babel-plugin-transform-runtime": "^6.23.0",
+    "babel-preset-env": "^1.2.2",
+    "babel-preset-react": "^6.23.0",
     "babel-preset-react-app": "^2.2.0",
+    "babel-preset-stage-0": "^6.22.0",
     "babel-runtime": "^6.20.0",
     "case-sensitive-paths-webpack-plugin": "1.1.4",
     "chalk": "1.1.3",
+    "concurrently": "^3.4.0",
     "connect-history-api-fallback": "1.3.0",
     "cross-spawn": "4.0.2",
     "css-loader": "0.26.1",
@@ -47,6 +48,7 @@
     "object-assign": "4.1.1",
     "postcss-loader": "1.2.2",
     "promise": "7.1.1",
+    "react-cosmos-webpack": "^2.0.0-beta.8",
     "react-dev-utils": "^0.5.2",
     "style-loader": "0.13.1",
     "url-loader": "0.5.7",
