--- a/package.json
+++ b/package.json
@@ -66,12 +66,14 @@
     "mobx": "^3.1.7",
     "mobx-react": "^4.1.3",
     "postscribe": "^2.0.8",
+    "rc-tooltip": "^3.4.2",
     "rc-touchable": "^1.0.13",
     "react": "next",
     "react-container-query": "^0.9.0",
     "react-dom": "next",
     "react-helmet": "^5.0.1",
     "react-loading": "^0.0.9",
+    "react-popover": "^0.4.7",
     "react-swipeable": "^3.9.2",
     "shortid": "^2.2.8",
     "styled-components": "next"
