--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "react-sokoban",
-  "homepage": "http://ron.chanou.info/sokoban",
+  "homepage": "./",
   "version": "0.0.1",
   "private": true,
   "scripts": {
@@ -8,8 +8,7 @@
     "build": "node scripts/build.js",
     "start": "node scripts/start.js",
     "test": "node scripts/test.js --env=jsdom",
-    "dev":
-      "node_modules/.bin/concurrently --kill-others \"node scripts/start.js\"  \"node scripts/test.js --env=jsdom\""
+    "dev": "node_modules/.bin/concurrently --kill-others \"node scripts/start.js\"  \"node scripts/test.js --env=jsdom\""
   },
   "devDependencies": {
     "autoprefixer": "6.7.2",
@@ -79,9 +78,15 @@
     "styled-components": "next"
   },
   "jest": {
-    "collectCoverageFrom": ["src/**/*.{js,jsx}"],
-    "setupFiles": ["<rootDir>/config/polyfills.js"],
-    "testPathIgnorePatterns": ["<rootDir>[/\\\\](build|docs|node_modules|scripts)[/\\\\]"],
+    "collectCoverageFrom": [
+      "src/**/*.{js,jsx}"
+    ],
+    "setupFiles": [
+      "<rootDir>/config/polyfills.js"
+    ],
+    "testPathIgnorePatterns": [
+      "<rootDir>[/\\\\](build|docs|node_modules|scripts)[/\\\\]"
+    ],
     "testEnvironment": "node",
     "testURL": "http://localhost",
     "transform": {
@@ -89,13 +94,17 @@
       "^.+\\.css$": "<rootDir>/config/jest/cssTransform.js",
       "^(?!.*\\.(js|jsx|css|json)$)": "<rootDir>/config/jest/fileTransform.js"
     },
-    "transformIgnorePatterns": ["[/\\\\]node_modules[/\\\\].+\\.(js|jsx)$"],
+    "transformIgnorePatterns": [
+      "[/\\\\]node_modules[/\\\\].+\\.(js|jsx)$"
+    ],
     "moduleNameMapper": {
       "^react-native$": "react-native-web"
     }
   },
   "babel": {
-    "presets": ["react-app"]
+    "presets": [
+      "react-app"
+    ]
   },
   "eslintConfig": {
     "extends": "react-app"
